syntax = "proto3";

package service.ourchat.friends.accept_friend.v1;

enum AcceptFriendResult {
  ACCEPT_FRIEND_RESULT_UNSPECIFIED = 0;
  ACCEPT_FRIEND_RESULT_SUCCESS = 1;
  ACCEPT_FRIEND_RESULT_FAIL = 2;
}

message AcceptFriendRequest {
  uint64 friend_id = 1;
  AcceptFriendResult status = 2;
  optional string leave_message = 3;
}

message AcceptFriendResponse {
  optional uint64 session_id = 1;
}

message AcceptFriendNotification {
  uint64 inviter_id = 5;
  uint64 invitee_id = 1;
  optional string leave_message = 2;
  AcceptFriendResult status = 3;
  optional uint64 session_id = 4;
}
